# Hilligoss

./: .gitignore  CMakeLists.txt  Hilligoss-OpenCV-ubuntu  LICENSE  README.md  bus error.mkv  pcm2wav.ps1  pcm2wav.sh
src/: hilligoss.cpp  hilligoss.h  main-nodeps.cpp  main-opencv.cpp  main.cpp
