cmake_minimum_required(VERSION 3.13)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_COMPILER g++)
project(HilligossProject CXX)

include_directories(include src)
add_library(Hilligoss src/hilligoss.cpp)

add_executable(hilligoss-nodeps src/main-nodeps.cpp)
target_link_libraries(hilligoss-nodeps Hilligoss)

set(CURSES_NEED_NCURSES TRUE)
find_package(Curses)
if (APPLE)
    find_package(OpenCV COMPONENTS core highgui videoio imgproc PATHS /opt/local/libexec/opencv4/cmake) 
else()
    find_package(OpenCV COMPONENTS core highgui videoio imgproc) 
endif()

if (DEFINED CURSES_FOUND)
if (DEFINED OpenCV_FOUND)
    set(CMAKE_CXX_FLAGS "-DNCURSES_STATIC")
    add_executable(Hilligoss-2.0 src/main-opencv.cpp)
    target_include_directories(Hilligoss-2.0 PUBLIC include src ${OpenCV_INCLUDE_DIRS} ${CURSES_INCLUDE_DIRS} )
    target_link_libraries(Hilligoss-2.0 ${OpenCV_LIBS} Hilligoss ncurses)
endif()
endif()